@@ -20,6 +20,7 @@ Other features
  * Improved diffing of StreamFields when comparing page revisions (Karl Hobley)
  * Highlight broken links to pages and missing documents in rich text (Brady Moe)
  * Preserve links when copy-pasting rich text content from Wagtail to other tools (Thibaud Colas)
+ * Rich text to contentstate conversion now prioritises more specific rules, to accommodate ``<p>`` and ``<br>`` elements with attributes (Matt Westcott)
 
 
 Bug fixes
